first-demployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: fast-api
        image: sidpalas/k8s-getting-started:0.0.4
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
            ephemeral-storage: "500Mi"
