first-demployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod  # Specify your issuer here
spec:
  rules:
  - host: app.trackswiftly.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: fast-api-service
            port:
              number: 80
  tls:
  - hosts:
    - app.trackswiftly.com
    secretName: foo-ingress-tls  # The name of the secret that will store the TLS certificate
